--- a/src/main/resources/by/stormnet/projectjavafx/Table.fxml
+++ b/src/main/resources/by/stormnet/projectjavafx/Table.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.stormnet.projectjavafx.TableController">
-   <Button alignment="CENTER" layoutX="220.0" layoutY="467.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="171.0" text="Сохранить в файл" textAlignment="CENTER" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.stormnet.projectjavafx.controllers.TableController">
+   <Button fx:id="buttonWriteExcelFile" alignment="CENTER" layoutX="220.0" layoutY="467.0" mnemonicParsing="false" onAction="#onWriteExcelFile" prefHeight="25.0" prefWidth="171.0" text="Сохранить в файл" textAlignment="CENTER" />
    <TableView fx:id="table" layoutY="-1.0" prefHeight="452.0" prefWidth="601.0">
      <columns>
        <TableColumn fx:id="worker" editable="false" prefWidth="130.0" sortable="false" text="Сотрудник" />
